Make sure the write termination function only terminates the parser that was active when it was set.  Bug 331620, r=mrbkap, sr=jst